# automate-enrollment

./: .env.sample  .gitignore  README.md  enroll.py  pyproject.toml  utils.py
